--- a/index.html
+++ b/index.html
@@ -184,25 +184,23 @@
 				</section>
 
 				<section>
-					<h2>2-way Data Binding</h2>
-					<ol>
-						<li>Update view when data changes</li>
-						<li>Update model when view changes</li>
-					</ol>
+					<h1>Let's hack!</h1>
 				</section>
 
 				<section>
-					<h2>Stellar Links</h2>
+					<h2>Useful stuff</h2>
 					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
+						<li><a href="http://angularjs.org/">angularjs.org</a></li>
+						<li><a href="https://chrome.google.com/webstore/detail/angularjs-batarang/ighdmehidhipcmcojjgiloacoafjmpfk">AngularJS Batarang</a> (Chrome Extension)</li>
+						<li><a href="http://angular-ui.github.io/">Angular UI</a></li>
+						<li><a href="http://ngmodules.org/">ngmodules.org</a></li>
+						<li><a href="http://egghead.io/">Training videos</a></li>
 					</ul>
 				</section>
 
 				<section>
 					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h2>Questions?</h2>
 				</section>
 
 			</div>
