Add slide about future of the web

--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
 				</section>
 
 				<section>
+					<h2>Angular = future of the web in your hands</h2>
+					<ul>
+						<li>Web Components</li>
+						<li>Model Driven Views</li>
+						<li>Object.observe</li>
+					</ul>
+				</section>
+
+				<section>
 					<h2>Useful stuff</h2>
 					<ul>
 						<li><a href="http://angularjs.org/">angularjs.org</a></li>
