Fix linguistic error

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					<h3><span style="color: red">&lt;3</span> jQuery (for manipulating DOM)</h3>
 					<h3 class="fragment">Imperative (vs. declarative HTML)</h3>
 					<h3 class="fragment">jQuery "just" allows you type less</h3>
-					<h4 class="fragment">and don't worry to much about IE :)</h4>
+					<h4 class="fragment">and not worry too much about IE :)</h4>
 					<h2 class="fragment">But web apps is more than just DOM manipulation!</h2>
 				</section>
 
